--- a/src/workshops/snippets/styleSnippetSelector.html
+++ b/src/workshops/snippets/styleSnippetSelector.html
@@ -8,9 +8,7 @@
         <!--/ko-->
         <ul class="flex-item flex-item-grow list" data-bind="foreach: { data: snippets, as: 'snippet' }, scrollable: {}">
             <li class="list-item" data-bind="css: { selected: snippet.hasFocus }, click: $component.selectSnippet, event: { keydown: $component.keydown }, attr: { title: snippet.displayName }">
-                <style-snippet params="{ snippetItem: snippet }">
-                    <button data-bind="css: classNames, text: displayName"></button>
-                </style-snippet>
+                <style-snippet data-bind="itemTemplate: $parent.itemTemplate" params="{ snippetItem: snippet }"></style-snippet>
             </li>
         </ul>
 
