Recatoring styles related to flex box.

--- a/src/workshops/snippets/styleAppearanceSelector.html
+++ b/src/workshops/snippets/styleAppearanceSelector.html
@@ -1,5 +1,5 @@
 <div class="editor">    
-    <div class="flex-container flex-container-column list-container">
+    <div class="flex flex-column list-container">
         <!--ko if: $component.working()-->
         <spinner></spinner>
         <!--/ko-->
