--- a/src/workshops/animations/animationSelector.html
+++ b/src/workshops/animations/animationSelector.html
@@ -2,7 +2,7 @@
     <h1>Animation</h1>
     <hr />
 
-    <div class="flex-container flex-container-column list-container">
+    <div class="flex flex-column list-container">
         <ul class="list" data-bind="scrollable: true">
             <li class="list-item">
                 <a href="#" title="Clear animation" class="list-item-label" data-bind="click: $component.clearAnimations">
