--- a/src/workshops/snippets/styleSnippetSelector.html
+++ b/src/workshops/snippets/styleSnippetSelector.html
@@ -2,7 +2,7 @@
     <h1>Snippets</h1>
     <hr/>
     
-    <div class="flex-container flex-container-column list-container">
+    <div class="flex flex-column list-container">
         <!--ko if: $component.working()-->
         <spinner></spinner>
         <!--/ko-->
