Fixed overflow style for grid cells. Made overflow controls of container editor optional.

--- a/src/workshops/container/container.html
+++ b/src/workshops/container/container.html
@@ -41,6 +41,7 @@
     </div>
 </div>
 
+<!-- ko if: overflowControls -->
 <div class="form-group form-group-collapsible">
     <label class="form-label">
         <a href="#" class="form-group-toggle" title="Toggle section" data-bind="collapse: '#contentFlowCollapse'"></a>
@@ -54,3 +55,4 @@
         </label>
     </div>
 </div>
+<!-- /ko -->
