Added media query generation from global JSS. Added background "original" size option. Refactored list styles.

--- a/src/workshops/background/background.html
+++ b/src/workshops/background/background.html
@@ -79,6 +79,9 @@
         </label>
         <div class="form-group">
             <label class="form-label">
+                <input name="size" type="radio" value="original" data-bind="checked: size" />Original
+            </label>
+            <label class="form-label">
                 <input name="size" type="radio" value="cover" data-bind="checked: size, event: { change: applyChanges }" />Cover
             </label>
             <label class="form-label">
