--- a/src/workshops/fonts/fontSelector.html
+++ b/src/workshops/fonts/fontSelector.html
@@ -4,7 +4,7 @@
     <h1>Font family</h1>
     <hr />
 
-    <div class="list fonts" role="list">
+    <div class="flex flex-column flex-item flex-item-grow fonts" role="list">
         <a href="#" role="listitem" class="list-item font-box" title="Clear font" data-bind="click: $component.clearFonts, focus: true">
             <span class="font-family">
                 (Inherit)
