--- a/src/workshops/typography/typography.html
+++ b/src/workshops/typography/typography.html
@@ -7,13 +7,13 @@
 
     <div id="typographyCollapse" class="collapse form-group-collapse">
         <div class="form-group">
-            <div class="toolbox-btn" data-bind="css: { 'toolbox-btn-is-active': isWeightBold() }, tooltipToggle: currentWeight, attr: { title: currentWeight }">
-                <a href="#" data-bind="click: toggleBold" aria-label="Make text bold">
+            <div class="toolbox-btn" title="Font weight" data-bind="css: { 'toolbox-btn-is-active': fontWeight }, tooltipToggle: currentWeight">
+                <a href="#" data-bind="click: toggleBold" aria-label="Change font weight">
                     <i class="paperbits-icon paperbits-bold"></i>
                 </a>
             </div>
-            <div class="toolbox-btn" data-bind="css: { 'toolbox-btn-is-active': fontStyle() === 'italic' }" title="Italic">
-                <a href="#" data-bind="click: toggleItalic" aria-label="Make text italic">
+            <div class="toolbox-btn" title="Font style" data-bind="css: { 'toolbox-btn-is-active': fontStyle }, tooltipToggle: currentStyle">
+                <a href="#" data-bind="click: toggleItalic" aria-label="Change font style">
                     <i class="paperbits-icon paperbits-italic"></i>
                 </a>
             </div>
