Changed size editor section name.

--- a/src/workshops/size/sizeEditor.html
+++ b/src/workshops/size/sizeEditor.html
@@ -1,7 +1,7 @@
 <div class="form-group form-group-collapsible">
     <label class="form-label">
         <a href="#" class="form-group-toggle" title="Toggle section" data-bind="collapse: '#sizeCollapse'"></a>
-        <b>Container size</b>
+        <b>Size</b>
     </label>
     <div id="sizeCollapse" class="collapse form-group-collapse">
         <!-- ko if: widthEnabled -->
