--- a/src/workshops/background/background.html
+++ b/src/workshops/background/background.html
@@ -73,7 +73,7 @@
 
         <!-- ko if: sourceKey() -->
         <label class="form-label">
-            Background picture sizing
+            Background sizing
             <button class="btn btn-info" type="button"
                 title="Help" data-bind="tooltipToggle: '<p><b>Contain:</b> Resize the background image to cover the entire container, even if it has to stretch the image or cut a little bit off one of the edges.</p><p><b>Cover:</b> Resize the background image to make sure the image is fully visible.</p>'"></button>
         </label>
@@ -86,6 +86,26 @@
             </label>
             <label class="form-label">
                 <input name="size" type="radio" value="contain" data-bind="checked: size, event: { change: applyChanges }" />Contain
+            </label>
+        </div>
+
+        <label class="form-label">
+            Background attachment
+            <button class="btn btn-info" type="button"
+                title="Help" data-bind="tooltipToggle: '<p><b>Contain:</b> Resize the background image to cover the entire container, even if it has to stretch the image or cut a little bit off one of the edges.</p><p><b>Cover:</b> Resize the background image to make sure the image is fully visible.</p>'"></button>
+        </label>
+        <div class="form-group">
+            <label class="form-label">
+                <input name="attachment" type="radio" value="inherit" data-bind="checked: attachment" />Inherit
+            </label>
+            <label class="form-label">
+                <input name="attachment" type="radio" value="scroll" data-bind="checked: attachment, event: { change: applyChanges }" />Scroll
+            </label>
+            <label class="form-label">
+                <input name="attachment" type="radio" value="fixed" data-bind="checked: attachment, event: { change: applyChanges }" />Fixed
+            </label>
+            <label class="form-label">
+                <input name="attachment" type="radio" value="local" data-bind="checked: attachment, event: { change: applyChanges }" />Local
             </label>
         </div>
         <!-- /ko -->
